# Differential_Evolution

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Config.cpp  Evolution.cpp  Evolution.h  OptInfo.cpp  Optimizer.cpp  README.md  allrail.json  clean.sh  hspice_util.cpp  hspice_util.h  love.cpp  makefile  pengbo.cpp  pengbo.json  process.pl  read_spice.cpp  template.json
circuit/: Single_ended.sp  opt.spec
circuit/allrail-weixin/: Single_ended.sp  weixin_opamp.sp
circuit/eff-w-weixin/: Single_ended.sp  m_params.sp  weixin_opamp.sp
circuit/pengbo/: Single_ended.sp  Single_ended_FF.sp  Single_ended_SS.sp
circuit/pengbo-json/: Single_ended.sp  opt.spec
circuit/weixin/: Single_ended.sp
circuit/weixin-all-rail/: Single_ended.sp  opt.spec
inc/: .gitignore  Config.h  DifferentialEvolution.cpp  DifferentialEvolution.h  Evolution.h  OptInfo.h  Optimizer.h  global.h  hspice_util.h  makefile  test.cpp  testbench.h  util.h
inc/DE/: DE.h  DEBuiltInStrategy.h  DEInterface.h  DEOrigin.h  DERandomF.h  DEStrategy.h  DEVariants.h  SaDE.h
inc/DE/strategy/: DEBuiltInStrategy.h  DEInterface.h
input/: allrail.json  effw.json  template.json
src/: Config.cpp  DifferentialEvolution.cpp  Evolution.cpp  Optimizer.cpp  global.cpp  hspice_util.cpp  main.cpp
src/DE/: DEOrigin.cpp  DERandomF.cpp  SaDE.cpp
src/DE/strategy/: DEBuiltInStrategy.cpp  DEInterface.cpp
test/: test.cpp  testbench.h
test/input/: allrail.json  pengbo.json  sade-effw.json
